--- a/FrontEnd/src/components/signup/signup.css
+++ b/FrontEnd/src/components/signup/signup.css
@@ -1,9 +1,9 @@
-.RegistrationContainer {
+.registrationContainer {
     width: 660px;
     box-sizing: border-box;
 }
 
-.RegistrationContainerBox {
+.registrationContainerBox {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -15,58 +15,79 @@
     padding: 48px 20px 36px 20px;
 }
 
-.RegistrationContainerHeader {
+.registrationContainerHeader {
     margin: 0 4% 1%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
 }
 
-.RegistrationInlineTitle {
+.registrationInlineTitle {
     font-family: roboto, 'Noto Sans Myanmar UI', arial, sans-serif;
     margin-bottom: 2%;
     font-size: 22px;
 }
 
-.RegistrationContainerHeaderText {
+.registrationContainerHeaderText {
     font-family: 'Noto Sans Myanmar UI', arial, sans-serif;
     font-size: 24px;
     line-height: 1.3333;
     font-size: 24px;
 }
 
-.Form {
+.form {
     width: 100%;
 }
 
-.FormContainer {
+.formContainer {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
 }
 
-.FormInput {
+.formInput {
     display: flex;
     flex-direction: row;
     align-items: center;
 }
 
-.FormInputField {
+.formInputField {
     width: 100%;
     height: 9vh;
     margin: 1%;
 }
 
+.regImg {
+    width: 60%;
+    height: 100%;
+}
+
+.imgText {
+    text-align: center;
+    margin: 0%;
+    font-family: 'Noto Sans Myanmar UI', arial, sans-serif
+}
+
+.footerButtons {
+    width: 97%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
 @media only screen and (max-width: 600px) {
-    .RegistrationContainerBox {
+    .registrationContainerBox {
         border: none;
     }
-    .RegistrationContainer {
+    .registrationContainer {
         width: 100%;
     }
-    .FormInput {
+    .formInput {
         display: flex;
         flex-direction: column;
+    }
+    .regImg {
+        display: none;
     }
 }
