--- a/FrontEnd/src/components/DashBoard/DashBoard.css
+++ b/FrontEnd/src/components/DashBoard/DashBoard.css
@@ -75,6 +75,13 @@
     font-family: "Product Sans", Arial, sans-serif;
 }
 
+.ProfileHandler {
+    /* padding: 20px; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 @media only screen and (max-width: 400px) {
     .headerTitle {
         margin: 1%;
