--- a/FrontEnd/src/components/AddNotes/AddNotes.css
+++ b/FrontEnd/src/components/AddNotes/AddNotes.css
@@ -5,6 +5,8 @@
     box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.302), 2px 4px 6px 4px rgba(60, 64, 67, 0.149);
     border-radius: 10px;
     font-family: Roboto, Arial, sans-serif;
+    /* margin-left: 180px; */
+    margin-top: 30px;
 }
 
 .notesField {
@@ -39,7 +41,8 @@
     .addNotes {
         display: flex;
         width: 300px;
-        margin-top: 77px;
+        margin-top: 317px;
+        margin-left: 0px;
     }
     .noteInput {
         width: 46%;
