--- a/FrontEnd/src/components/ForgotPassword/ForgotPassword.css
+++ b/FrontEnd/src/components/ForgotPassword/ForgotPassword.css
@@ -95,8 +95,9 @@
 
 @media only screen and (max-width: 600px) {
     .resetPassContainerBox {
+        box-sizing: border-box;
         border: none;
-        padding: 63px 40px 36px 40px
+        padding: 62px 0px 0px 53px;
     }
     .resetPassContainer {
         width: 100%;
