--- a/FrontEnd/src/components/signup/Signup.css
+++ b/FrontEnd/src/components/signup/Signup.css
@@ -84,6 +84,10 @@
     }
     .registrationContainer {
         width: 100%;
+        display: flex;
+    }
+    .registrationContainerHeaderText {
+        font-size: 23px;
     }
     .formInput {
         display: flex;
