--- a/FrontEnd/src/components/DisplayNotes/DisplayNote.css
+++ b/FrontEnd/src/components/DisplayNotes/DisplayNote.css
@@ -37,6 +37,7 @@
     display: flex;
     flex-flow: wrap;
     align-items: flex-start;
+    margin-left: 70px;
 }
 
 .addnoteNone {
@@ -46,5 +47,10 @@
 @media only screen and (max-width: 615px) {
     .noteBlock {
         width: 100%;
+        margin-left: 10px;
+    }
+    .displayNotes {
+        width: 105vw;
+        margin: 10px 3px 10px -73px;
     }
 }
