--- a/FrontEnd/src/components/ResetPassword/ResetPassword.css
+++ b/FrontEnd/src/components/ResetPassword/ResetPassword.css
@@ -90,7 +90,9 @@
 @media only screen and (max-width: 600px) {
     .forgetContainerBox {
         border: none;
-        padding: 28px 40px 36px 40px
+        padding: 30px 0px 52px 43px;
+        box-sizing: border-box;
+        margin-left: 11px;
     }
     .forgetContainer {
         width: 100%;
