--- a/FrontEnd/src/components/signin/SignIn.css
+++ b/FrontEnd/src/components/signin/SignIn.css
@@ -96,7 +96,9 @@
 @media only screen and (max-width: 600px) {
     .loginContainerBox {
         border: none;
-        padding: 28px 40px 36px 40px
+        padding: 38px 1px 52px 41px;
+        margin-left: 5px;
+        box-sizing: border-box;
     }
     .loginContainer {
         width: 100%;
